# part-vault

./: .gitignore  CMakeLists.txt  PartVault_uk.ts  README.md  addcategorydialog.cpp  addcategorydialog.h  addpartdialog.cpp  addpartdialog.h  addstoragelocationdialog.cpp  addstoragelocationdialog.h  app.rc  categorytreemodel.cpp  categorytreemodel.h  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  partsmodel.cpp  partsmodel.h  storagetreemodel.cpp  storagetreemodel.h  utils.cpp
.github/: copilot-instructions.md
.github/workflows/: build.yml  create-signing-cert.yml
cmake/: BuildIfwInstaller.cmake  QtIfwInstaller.cmake
docs/: Doxyfile.in
installer/config/: config.xml.in
packaging/windows/: create-signing-cert.ps1
packaging/windows/msix/: Package.appxmanifest
sql/: dummy.sql  init.sql
src/: CMakeLists.txt  database.cpp  database.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  utils.cpp  utils.h
src/dialogs/: addcategorydialog.cpp  addcategorydialog.h  addpartdialog.cpp  addpartdialog.h  addstoragelocationdialog.cpp  addstoragelocationdialog.h
src/i18n/: PartVault_uk.ts
src/models/: categorytreemodel.cpp  categorytreemodel.h  filesmodel.cpp  filesmodel.h  partsmodel.cpp  partsmodel.h  reloadabletreemodel.h  storagetreemodel.cpp  storagetreemodel.h
src/sql/: dummy.sql
src/views/: expandabletreeview.cpp  expandabletreeview.h
tests/: CMakeLists.txt  test_database.cpp  test_utils.cpp  tst_databasearchive.cpp  tst_stripsqlcomments.cpp
